--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "ChronoGG-Chrome-Extension",
   "version": "0.0.1",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "repository": "git@github.com:RumbleFrog/ChronoGG-Chrome-Extension.git",
   "author": "RumbleFrog <xxlosttechxx@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "./node_modules/.bin/webpack --mode production",
+    "watch": "./node_modules/.bin/webpack -w --mode development"
+  },
   "devDependencies": {
     "@types/chrome": "^0.0.61",
+    "copy-webpack-plugin": "^4.5.1",
     "ts-loader": "^4.0.1",
     "typescript": "^2.7.2",
-    "webpack": "^4.1.1"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12"
   }
 }
